compiler/testData/cli/jvm/nestedTypeAliasesError.out
warning: ATTENTION!
This build uses unsafe internal compiler arguments:

-XXLanguage:-NestedTypeAliases

This mode is not recommended for production use,
as no stability/compatibility guarantees are given on
compiler or generated code. Use it at your own risk!

compiler/testData/cli/jvm/nestedTypeAliases.kt:4:5: error: the feature "nested type aliases" is disabled
    typealias TA = A
    ^^^^^^^^^^^^^^^^
COMPILATION_ERROR
